El inicio de la CARMA Update
Por fin voy a subir el material de CARMA, dos años tarde, pero ya lo voy a hacer. Tengo que volver a solicitar mucho jajaja.

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,10 @@ collections:
   olimpiadas:
     output: true
     permalink: '/:name/'
-  olimpiadas_nacionales:
+  olimpiadas_smm:
+    output: true
+    permalink: '/:name/'
+  olimpiadas_carma:
     output: true
     permalink: '/:name/'
   hall_of_fame:
