--- a/_data/selectivos/ommgto.yml
+++ b/_data/selectivos/ommgto.yml
@@ -21,3 +21,11 @@
     file: 2025 S3.pdf
   - number: 4
     file: 2025 S4.pdf
+  - number: 5 (día 1)
+    file: 2025 S5-1.pdf
+  - number: 5 (día 2)
+    file: 2025 S5-2.pdf
+  - number: 6 (día 1)
+    file: 2025 S6-1.pdf
+  - number: 6 (día 2)
+    file: 2025 S6-2.pdf
