CARMA Update Part II
Agregados los folletos (posible reclasificación futura) y la ficha de colaborador. Gracias, uge.

--- a/_data/colaboradores.yml
+++ b/_data/colaboradores.yml
@@ -44,3 +44,9 @@
   contribution: Donaron el material de su página, el cual se utilza para preparar a jóvenes participantes de la Olimpiada Matemática Española.
 
 
+- name: CARMA
+  link: https://www.facebook.com/CARmatematicas/
+  thumbnail: Logo-carma.png
+  contribution: Perpetuando la amistad con Guanajuato, CARMA donó los exámenes de sus concursos nacionales, así como algunos folletos que se realizaron bajo la Editorial Dinosaurio. Gracias.
+
+
